import "@aws-cdk/assert/jest"
import * as cm from "aws-cdk-lib/aws-certificatemanager"
import * as ec2 from "aws-cdk-lib/aws-ec2"
import * as ecr from "aws-cdk-lib/aws-ecr"
import * as ecs from "aws-cdk-lib/aws-ecs"
import * as route53 from "aws-cdk-lib/aws-route53"
import * as iam from "aws-cdk-lib/aws-iam"
import { App, RemovalPolicy, SecretValue, Stack } from "aws-cdk-lib"
import "jest-cdk-snapshot"
import { ApiGateway } from ".."
import { LoadBalancer } from "../../load-balancer"
import { RetentionDays } from "aws-cdk-lib/aws-logs"
import { FargateService, ListenerRule } from "../../ecs"
import { Secret } from "aws-cdk-lib/aws-secretsmanager"
import { Queue } from "aws-cdk-lib/aws-sqs"
import { Function, InlineCode, Runtime } from "aws-cdk-lib/aws-lambda"

describe("HTTP API Gateway", () => {
  const albListenerHostName = "my-test-service-behind-alb.example.com"
  // These are set by the beforeEach below the tests.
  let stack: Stack
  let supportStack: Stack
  let vpc: ec2.Vpc
  let hostedZone: route53.HostedZone
  let loadBalancer: LoadBalancer
  let loadBalancerSecurityGroup: ec2.SecurityGroup

  test("creates API-GW HTTP API using IAM auth and ALB integration", () => {
    // The loadbalancer security group MUST have an egress rule to the API-GW.
    // Check the createEcsAlbService method for this.
    createEcsAlbService()

    const apiGw = new ApiGateway(stack, "TestAlbApiGateway", {
      dns: {
        subdomain: "my-test-alb-api",
        hostedZone: hostedZone,
      },
      apiGateway: {
        accessLogs: {
          removalPolicy: RemovalPolicy.RETAIN,
          retention: RetentionDays.SIX_MONTHS,
        },
        basePath: "/api",
        authorization: { type: "IAM" },
        albIntegration: {
          applicationLoadBalancerListener: loadBalancer.httpsListener,
          listenerPriority: listenerPriorities.myTestAlbApi,
          hostHttpsName: albListenerHostName,
          serviceListenerRuleHostHeader: albListenerHostName,
          securityGroupWithAlbAccess: loadBalancerSecurityGroup,
          applicationLoadBalancerVpc: vpc,
        },
      },
    })

    apiGw.grantTeamAdministratorRoleInvoke()

    // An external API consumer's AWS account, which we allow access:
    const externalAccountId = "12312312"
    /** The IAM user needs to assume this role in order to invoke the API. */
    const externalCallerRole = new iam.Role(stack, "ApigwExternalCallerRole", {
      assumedBy: new iam.CompositePrincipal(
        new iam.AccountPrincipal(externalAccountId),
        // add all the external accounts/roles here!
      ),
      description: `Allows external users to access the API-GW for '${apiGw.domain}' if they can assume this role.`,
    })
    apiGw.grantInvoke(externalCallerRole)

    expect(stack).toMatchCdkSnapshot()
  })

  test("creates API-GW HTTP API using basic auth and SQS integration", () => {
    // Don't do this in your stack - use a cli script to set secrets.
    new Secret(stack, "BasicAuthCredentialsSecret", {
      secretName:
        "/example/cdk/prod/myService/myservice.gateway.auth.basic.credentials",
      secretStringValue: SecretValue.unsafePlainText(
        `{ "credentials": "[\\"dXNlcm5hbWU6cGFzc3dvcmQ=\\", \\"YWRtaW46aHVudGVyMg==\\"]" }`,
      ),
    })

    // Load a referenced secret that is already set
    const credentialsJsonArraySecret = Secret.fromSecretNameV2(
      stack,
      "BasicAuthCredentials",
      `/example/cdk/prod/myService/myservice.gateway.auth.basic.credentials`,
    )

    const ingressSqsQueue = new Queue(stack, "IngressQueue", {
      queueName: "api-ingress-queue",
      fifo: false,
    })

    new ApiGateway(stack, "TestSqsApiGateway", {
      dns: {
        subdomain: "my-test-sqs-api",
        hostedZone: hostedZone,
      },
      apiGateway: {
        accessLogs: {
          removalPolicy: RemovalPolicy.RETAIN,
          retention: RetentionDays.SIX_MONTHS,
        },
        basePath: "/api/queue/add",
        disableProxyPath: true,
        authorization: {
          type: "BASIC_AUTH_LAMBDA",
          credentialsJsonArraySecret: credentialsJsonArraySecret,
        },
        sqsIntegration: {
          queue: ingressSqsQueue,
        },
      },
    })

    expect(stack).toMatchCdkSnapshot()
  })

  test("creates API-GW HTTP API with no auth and Lambda integration", () => {
    const apiLambda = new Function(stack, "MyApiLambda", {
      vpc: vpc,
      code: new InlineCode(
        `exports.handler = async(event) => { return "Hello World"; }`,
      ),
      handler: "index.handler",
      runtime: Runtime.NODEJS_16_X,
    })

    new ApiGateway(stack, "TestLambdaApiGateway", {
      dns: {
        subdomain: "my-test-lambda-api",
        hostedZone: hostedZone,
      },
      apiGateway: {
        accessLogs: {
          removalPolicy: RemovalPolicy.RETAIN,
          retention: RetentionDays.SIX_MONTHS,
        },
        basePath: "/api/hello",
        disableProxyPath: true,
        authorization: {
          type: "NONE",
        },
        lambdaIntegration: {
          lambdaFunction: apiLambda,
        },
      },
    })

    expect(stack).toMatchCdkSnapshot()
  })

  beforeEach(() => {
    const app = new App()
    supportStack = new Stack(app, "SupportStack", {
      env: {
        region: "eu-west-1",
      },
    })
    stack = new Stack(app, "Stack", {
      env: {
        region: "eu-west-1",
      },
    })

    vpc = new ec2.Vpc(supportStack, "Vpc")

    hostedZone = new route53.HostedZone(supportStack, "HostedZone", {
      zoneName: "example.com",
    })
  })

  function createEcsAlbService() {
    const certificate = new cm.Certificate(supportStack, "Certificate", {
      domainName: `*.example.com`,
      subjectAlternativeNames: ["example.com"],
      validation: cm.CertificateValidation.fromDns(hostedZone),
    })

    loadBalancerSecurityGroup = new ec2.SecurityGroup(
      supportStack,
      "LoadBalancerSecurityGroup",
      {
        vpc: vpc,
        allowAllOutbound: false,
      },
    )

    // VERY IMPORTANT! Or your api-gw fails silently when invoking it
    loadBalancerSecurityGroup.addEgressRule(
      loadBalancerSecurityGroup,
      ec2.Port.tcp(443),
      "Outbound to self for ALB to API-GW VPC-Link",
    )

    loadBalancer = new LoadBalancer(supportStack, "LoadBalancer", {
      certificates: [certificate],
      vpc: vpc,
      overrideLoadBalancerProps: {
        securityGroup: loadBalancerSecurityGroup,
      },
    })

    const ecsCluster = new ecs.Cluster(supportStack, "Cluster", {
      vpc,
    })

    const ecrRepository = new ecr.Repository(supportStack, "Repository", {
      repositoryName: "example-repository",
    })

    const service = new FargateService(stack, "Service", {
      serviceName: "example-service",
      vpc: vpc,
      cluster: ecsCluster,
      desiredCount: 2,
      parameters: [],
      ecsImage: ecs.ContainerImage.fromEcrRepository(
        ecrRepository,
        "exampleEcrTag",
      ),
    })

    new ListenerRule(stack, "Dns", {
      domainName: albListenerHostName,
      hostedZone: hostedZone,
      httpsListener: loadBalancer.httpsListener,
      listenerPriority: 10,
      loadBalancer: loadBalancer.loadBalancer,
      targetGroup: service.targetGroup!,
    })
  }
})

const listenerPriorities = {
  myTestAlbApi: 10,
}
